--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
+    "marked": "^14.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
