--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tiptap/react": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
     "axios": "^1.6.8",
+    "dompurify": "^3.1.7",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.446.0",
     "marked": "^14.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
